@@ -127,7 +127,7 @@ const _PyUnicode_TypeRecord _PyUnicode_TypeRecords[] = {
     {0, 0, 0, 0, 8, 1540},
     {0, 0, 0, 0, 9, 1540},
     {0, 0, 0, 0, 0, 1792},
-    {42877, 0, 42877, 0, 0, 3849},
+    {42877, 7545, 42877, 0, 0, 3849},
     {3814, 0, 3814, 0, 0, 1801},
     {65477, 0, 65477, 0, 0, 1801},
     {0, 57921, 0, 0, 0, 1921},
@@ -174,7 +174,7 @@ const _PyUnicode_TypeRecord _PyUnicode_TypeRecords[] = {
     {0, 54787, 0, 0, 0, 1921},
     {0, 54753, 0, 0, 0, 1921},
     {58272, 0, 58272, 0, 0, 1801},
-    {0, 7545, 0, 0, 0, 3969},
+    {42877, 7545, 42877, 0, 0, 3969},
     {0, 40, 0, 0, 0, 1921},
     {65496, 0, 65496, 0, 0, 1801},
 };
